--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -20,6 +20,9 @@
     "reorder": { "message": "Reorder by Title" },
     "reloadGBookmarks": { "message": "Reload Google Bookmarks" },
     "addBookmark": { "message": "Bookmark This Page" },
+    "cut": { "message": "Cut" },
+    "copy": { "message": "Copy" },
+    "paste": { "message": "Paste" },
     "remove": { "message": "Delete" },
     
     // Add Google bookmark dialog
